# hpcagent

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  issues.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
hpcagent/: __init__.py  __main__.py  agent.py
hpcagent/core/: config.py  docfetch.py  llm.py  recency.py  selectors.py  tools.py  ui.py  web.py
hpcagent/hpc/: accounts.py  disk.py  docs.py  jobs.py  nodes.py  permissions.py  slurm.py
hpchpcagent/: __init__.py  __main__.py  agent.py
hpchpcagent/core/: llm.py  recency.py  selectors.py  tools.py  ui.py  web.py
hpchpcagent/hpc/: accounts.py  disk.py  docs.py  jobs.py  nodes.py  permissions.py  slurm.py
hpcpilot/: __init__.py  __main__.py  agent.py
hpcpilot/core/: config.py  docfetch.py  llm.py  selectors.py  ui.py
hpcpilot/hpc/: accounts.py  disk.py  jobs.py  nodes.py  permissions.py
scripts/: demo.py
tests/: test_parsers.py  test_slurm.py
